--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
 :root{
-    --branco-principal:   #ffffff
+    --branco-principal:  #FFFFFF;
+    --cinza-secundario:  #COCOCO;
+    --botao-azul:  #167BF7;
+    --cor-de-fundo: #00030C;
+}
+body{
+    background-color: var(--cor-de-fundo);
+    color: var(--branco-principal);
+}
+*{
+    margin: 0;
+    padding: 0;
+}
+.principal{
+    background-image: url("image.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+.container{
+    height: 100vh ;
 }
