--- a/style.css
+++ b/style.css
@@ -20,3 +20,10 @@ body{
 .container{
     height: 100vh ;
 }
+.container-botao{
+    background-color: var(--botao-azul);
+    border-radius: 5px;
+    padding: 1em;
+    color: var(--branco-principal);
+    display: block;
+}
