--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ body{
 }
 .container{
     height: 100vh ;
+    display: grid;
+    grid-template-columns: 50% 50%;
 }
 .container-botao{
     background-color: var(--botao-azul);
@@ -26,4 +28,8 @@ body{
     padding: 1em;
     color: var(--branco-principal);
     display: block;
+}
+.botao-secundario{
+    background-color: transparent;
+    border: 2px solid; var(--branco-principal);
 }
