--- a/style.css
+++ b/style.css
@@ -31,5 +31,5 @@ body{
 }
 .botao-secundario{
     background-color: transparent;
-    border: 2px solid; var(--branco-principal);
+    border: 2px solid var(--branco-principal);
 }
