--- a/style.css
+++ b/style.css
@@ -3,10 +3,14 @@
     --cinza-secundario:  #COCOCO;
     --botao-azul:  #167BF7;
     --cor-de-fundo: #00030C;
+    --fonte-principal:'Inter';
 }
 body{
     background-color: var(--cor-de-fundo);
     color: var(--branco-principal);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
 *{
     margin: 0;
@@ -32,4 +36,14 @@ body{
 .botao-secundario{
     background-color: transparent;
     border: 2px solid var(--branco-principal);
+}
+.container-aviso{
+    font-size: 12px;
+    color: var(--cinza-secundario);
+    display: block;
+    text-decoration: none;
+}
+.container-titulo{
+    font-size: 28px;
+    font-weight: 700;
 }
